...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyInvoicesActivity">

    <TextView
        android:id="@+id/titleMyInvoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/my_invoices"
...
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewTotalProfit"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
...
        <!--            android:visibility="invisible" />-->
        <!--        </LinearLayout>-->
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/cardViewStats"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
...
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    <Button-->
<!--        android:id="@+id/btnViewInvoices"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/cardViewGraph"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:text="View Invoices" />-->

    <Button
        android:id="@+id/btnCreateInvoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardViewGraph"
        android:layout_centerHorizontal="true"
        android:text="Create New Invoice" />
</RelativeLayout>
...
