...
    <!-- Link to Login Screen -->

    <!--    android:textColor="@android:color/white"-->
    <!--    android:textColorHint="@android:color/white"-->

    <ImageView
        android:id="@+id/logo"
        style="@style/logoStyle"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btn_login"
        style="@style/buttonStyle"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
...
